--- a/Testing/Views/Product/Index.cshtml
+++ b/Testing/Views/Product/Index.cshtml
@@ -11,6 +11,11 @@
 
 <div>
     <h2>Products</h2>
+
+    <div style="display: block">
+        <a href="/Product/InsertProduct/">Create a New Product</a>
+    </div>
+    
     <table class ="table">
     
     <tr>
